--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal Portfolio">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Samuel Olatunbosun">
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="Images/favicon.png" >
     <script src="https://kit.fontawesome.com/df9e68901a.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 <div id="header">
     <div class="container">
         <nav>
-            <img src="Images/logo.png" class="logo">
-            <ul>
+             <img src="Images/logo.png" class="logo"> 
+            <ul id="sidemenu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <i class="fas fa-solid fa-x" onclick="closemenu()"></i>
             </ul>
+            <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
             <p>Electrical and Computer Engineering student at <a target = "_blank" href="https://cockrell.utexas.edu/"> <i> <span> The University of Texas at Austin</span> </i> </a> </p>
@@ -33,7 +40,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-<!-- INSERT SQUARE IMAGE WITH BACKGROUND  <img src = -->
+                <img src="Images/Samuel Portrait.JPG" class="portrait">
             </div>
             <div class="about-col-2">
                 <H1 class="sub-title"> <span>About Me</span></H1>
@@ -63,41 +70,31 @@
                 <div class="tab-contents active-tab" id="education">
                     <!--Education-->
                     <ul>
-                        <li><span>2022 - Present</span> <br> <strong>The University of Texas at Austin<br>Electrical and Computer Engineering Honors </strong> <br> <a>Software Engineering and Systems <br>Cumulative GPA: 3.72/4.00 </a></li>
+                        <li><span>2022 - Present</span> <br> <strong>The University of Texas at Austin<br>Electrical and Computer Engineering Honors </strong> <br> <a>Software Engineering and Systems <br>Cumulative GPA: 3.79/4.00 </a></li>
                         <li><span>2021 - 2022</span> <br> <strong>Dallas County Community College<br> Associates of Science </strong> <br> <a>Cumulative GPA: 4.00/4.00</a></li>
-                        <li><span>2019 - 2021</span> <br> <strong>James E. Taylor High School </strong>                                                                                                                                                                                                                                                                                                                                                                                                                                       </li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     </li>
+                        <li><span>2019 - 2021</span> <br> <strong>James E. Taylor High School </strong> <br> <a>Cumulative GPA: 3.36/5.00</a></li>                                                                                                                                                                                                                                                                                                                                                                                                                                    
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience">
                    <!--Experience-->
                     <ul>
-                        <li><span>May 2021 - Nov 2021</span> <br> <strong>Business Analyst Intern</strong> <br> <a>&bull; Wrote user stories, Acceptance Criteria, and Test Scenarios for Church Marshall web application <br>&bull; Utilized SQL to search through the databases of the Church Marshall web application<br>&bull; Changed the user interface of the church marshall application and increased app use by 7%</a></li>
-                        <li><span>April 2023</span> <br> <strong>Embedded System “Space Invaders” Remake (C++/ ARM)</strong> <br> <a>&bull; Created a printed circuit board to be interfaced with Texas Instruments TM4C123, to create a hand-held game console <br>&bull; Designed Digital-to-Analog Converter (DAC), Analog-to-Digital Converters (ADC), and UART Protocolsn <br>&bull; Implemented a game engine in C++ that featured movement mechanics, obstacle detection, sound production and pixel art converted</a> </li>
-                        <li><span>May 2023 - Aug 2023</span> <br> <strong>UTeach Tutoring</strong> <br> <a>&bull; Acquired certification to teach advanced placement computer science courses which utilize Java, Python and Scratch<br>&bull; Taught Advanced Placement computer science course work to highschool students in order to prepare for annual Advanced placement test</a></li>
-                        <li><span>May 2023 - Aug 2023</span> <br> <strong>Electrical and Computer Engineering Advisor </strong><br> <a>&bull; Advised the 2500 students in the department of Electrical and Computer Engineering in the University of Texas at Austin on course work and degree planning<br>&bull; Aided 30% of the Universities students to graduate on time through strategic course planning and intense research</a></li>
-                        <li><span>May 2023 - Aug 2023</span> <br> <strong>President of Student Government Association </strong><br> <a>&bull; Managed the Student Government Association of 15 students, and attended meetings with the President of Dallas Community College <br>&bull; Hosted over 100 people in State-wide conferences at my community college <br>&bull; Aided 50 non-English speakers and senior individuals register for classes<br>&bull; Increased the proficiency in registering students in Dallas College by 25%</a></li>
+                        <li><span>May 2021 - Nov 2021</span> <br> <strong>Business Analyst Intern</strong> | <em>Church Marshall Web application</em><br> <a>&bull; Wrote user stories, Acceptance Criteria, and Test Scenarios for Church Marshall web application <br>&bull; Utilized SQL to search through the databases of the Church Marshall web application<br>&bull; Changed the user interface of the church marshall application and increased app use by 7%</a></li>
+                        <!--<li><span>April 2023</span> <br> <strong>Embedded System “Space Invaders” Remake (C++/ ARM)</strong> <br> <a>&bull; Created a printed circuit board to be interfaced with Texas Instruments TM4C123, to create a hand-held game console <br>&bull; Designed Digital-to-Analog Converter (DAC), Analog-to-Digital Converters (ADC), and UART Protocolsn <br>&bull; Implemented a game engine in C++ that featured movement mechanics, obstacle detection, sound production and pixel art converted</a> </li>-->
+                        <li><span>May 2023 - Aug 2023</span> <br> <strong>Computer Science Tutor</strong> | <em>UTeach Institute</em><br> <a>&bull; Acquired certification to teach advanced placement computer science courses which utilize Java, Python and Scratch<br>&bull; Taught Advanced Placement computer science course work to highschool students in order to prepare for annual Advanced placement test</a></li>
+                        <!--<li><span>May 2023 - Aug 2023</span> <br> <strong>Electrical and Computer Engineering Advisor </strong> | Cockrell School of Engineering<br> <a>&bull; Advised the 2500 students in the department of Electrical and Computer Engineering in the University of Texas at Austin on course work and degree planning<br>&bull; Aided 30% of the Universities students to graduate on time through strategic course planning and intense research</a></li> -->
+                        <li><span>May 2023 - Aug 2023</span> <br> <strong>President of Student Government Association </strong> | <em>Dallas County Community College</em> <br> <a>&bull; Managed the Student Government Association of 15 students, and attended meetings with the President of Dallas Community College <br>&bull; Hosted over 100 people in State-wide conferences at my community college <br>&bull; Aided 50 non-English speakers and senior individuals register for classes<br>&bull; Increased the proficiency in registering students in Dallas College by 25%</a></li> 
                     </ul>
                 </div>
                 <div class="tab-contents" id="honors">
                    <!--Honors & Awards-->
                     <ul>
-                        <li> <strong>Honors and Awards</strong> <br> <a>&bull; The University of Texas university honors<br>&bull; Friends of Alec Scholarship<br>&bull; David Jones Scholarship in Engineering<br>&bull; State Farm STEM Scholarship <br>&bull; Dallas College Sustainability scholarship<br>&bull; Phi Theta Kappa Honors Society</a></li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
+                        <li> <strong>Honors and Awards</strong> <br> <a>&bull; The University of Texas University Honors (3 Semesters)   <br>&bull; Samsung Scholarship      <br>&bull; Allen F. Jacobson Endowed Presidential Scholarship in Engineering                 <br>&bull; Friends of Alec Scholarship                 <br>&bull; David Jones Scholarship in Engineering                    <br>&bull; State Farm STEM Scholarship                    <br>&bull; Phi Theta Kappa Honors Society                 </a></li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="skills">
                  <!--Skills-->
                     <ul>
-                        <li> <strong>Skills </strong> <br> <a>&bull; Proficient in C, C++,  Java and Python<br>&bull; Experience with HTML, CSS and Javascript<br>&bull; Proficient in Microsoft Word, Powerpoint, and Excel</a></li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
-                        <li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  </li>
+                        <li> <strong>Skills </strong> <br> <a>&bull; Proficient in C, C++,  Java and Python, ARM Assembly, Microsoft Word, Powerpoint, and Excel<br>&bull; Experience with HTML, CSS and Javascript
                     </ul>
                 </div>
             </div>
@@ -115,7 +112,7 @@
                 <a target="_blank" href="mailto: samuel_04@utexas.edu"><i class="fas fa-paper-plane"></i> Samuel_04@utexas.edu</a>
                 <div class="social-icons">
                     <a target="_blank" href="https://www.linkedin.com/in/samuel-olatunbosun/"><i class="fa-brands fa-linkedin"></i></a>
-                    <a target="_blank" href="https://github.com/me50/ayomagic"><i class="fa-brands fa-github"></i></a>
+                    <a target="_blank" href="https://github.com/ayomagic"><i class="fa-brands fa-github"></i></a>
                     <a target="_blank" href="https://www.facebook.com/samuel.olatunbosun.773/"><i class="fa-brands fa-facebook"></i></a>
                 </div>
             </div>
@@ -170,6 +167,19 @@
         })
         .catch(error => console.error('Error!', error.message))
     })
+  </script>
+
+  <script>
+
+    var sidemenu = document.getElementById("sidemenu");
+
+    function openmenu(){
+        sidemenu.style.right = "1100px";
+    }
+    function closemenu(){
+        sidemenu.style.right = "-200px";
+    }
+
   </script>
     
 </body>
