--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="header">
     <div class="container">
         <nav>
-             <img src="favicon.png" class="logo"> 
+             <img src="headshot.png" class="logo"> 
             <ul id="sidemenu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
